# gmail-mcp-server

./: .gitignore  DASHBOARD.md  Makefile  README.md  app.py  commands_sync.config.yaml  gmail-assistant-prompt.md  gmail_assistant_prompt.md  pyproject.toml  requirements.txt
.claude/commands/: emails.md  triage.md
.cursor/commands/: emails.md
.gemini/commands/: emails.toml
gmail_mcp_server/: __init__.py  auth.py  gmail_client.py  server.py
scripts/: inbox-manager.sh  sync-commands.sh  sync_commands.py
static/: dashboard.js  style.css
templates/: dashboard.html
tests/: test_gmail_client.py  test_server.py
